# thor-ros-moveit

./: .gitignore  README.md
src/thor_control/: CMakeLists.txt  package.xml
src/thor_control/config/: config.yaml
src/thor_control/include/thor_control/: mesh_loader.h  pick_place_task.h
src/thor_control/launch/: start_control.launch  start_control_legacy.launch
src/thor_control/meshes/: egg.stl  saucepan.stl
src/thor_control/sdf/: egg.sdf
src/thor_control/src/: mesh_loader.cpp  pick_place_task.cpp  thor_control.cpp  thor_control_legacy.cpp
src/thor_description/: CMakeLists.txt  package.xml
src/thor_description/meshes/: art1.stl  art2.stl  art3.stl  art4.stl  art5.stl  art6.stl  hand.stl
src/thor_description/urdf/: env.xacro  gazebo.xacro  thor.gazebo  thor.xacro
src/thor_hardware_interface/: CMakeLists.txt  package.xml
src/thor_hardware_interface/include/thor_hardware_interface/: thor_hardware_interface.h
src/thor_hardware_interface/launch/: thor_hardware_interface.launch
src/thor_hardware_interface/src/: thor_hardware_interface.cpp  thor_hardware_interface_node.cpp
src/thor_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/thor_moveit/config/: fake_controllers.yaml  gazebo_controllers.yaml  gazebo_thor.urdf  joint_limits.yaml  kinematics.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  thor.srdf
src/thor_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_real_simple_moveit.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_legacy.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
