<?xml version="1.0"?>
<package format="2">
  <name>thor_control</name>
  <version>0.0.0</version>
  <description>The thor_control package</description>

  <maintainer email="mike@todo.todo">mike</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosparam_shortcuts</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>thor_moveit</build_depend>
  <build_depend>thor_hardware_interface</build_depend>
  <build_depend>thor_description</build_depend>
  
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>thor_moveit</exec_depend>
  <exec_depend>thor_hardware_interface</exec_depend>
  <exec_depend>thor_description</exec_depend>

  <exec_depend>moveit_task_constructor_capabilities</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
